examples/test/testpolicy47.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy47
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value32
          key38: value46
      podSelector:
        matchLabels:
          key4: value4
          key17: value0
